fixing layout issues in ourstorycard component

--- a/laab/src/change.css
+++ b/laab/src/change.css
@@ -12,13 +12,6 @@
   font-family: 'Segoe UI', sans-serif;
 }
 
-.card-title {
-  font-size: 40px;
-  font-weight: 600;
-  color: #FF8F1E;
-  margin-bottom: 1rem;
-}
-
 .cta-title {
   color: #f97316; 
   font-family: 'Boldonse';
