--- a/laab/src/index.css
+++ b/laab/src/index.css
@@ -154,7 +154,7 @@ left: -258px;
 .flowerPic {
   position: absolute;
   margin-left: 40px;
-  top: 850px;
+  top: 550px;
   width: 700px;
 height: 1000px;
 transform: rotate(2.59deg);
@@ -496,13 +496,6 @@ margin-left: -80px;
     left: 100px;
   }
 
-  .flowerPic,
-  .ourStoryFlower {
-    width: 90%;
-    left: 5%;
-    top: 800px;
-  }
-
   .everyChild {
     width: 90%;
     left: 5%;
@@ -555,10 +548,11 @@ margin-left: -80px;
 }
 
   .ourStoryFlower {
-  top: 1450px;
-  width: 280px;
+  top: 400px;
+  width: 200px;
   height: auto;
-  margin-left: -30px;
+  margin-left: -80px;
+  transform: rotate(-5deg);
 }
 
 .wavyLine {
